UPDATE: View user endpoint and its test
